# vulnscan-cli

./: README.md  pyproject.toml
.github/workflows/: vulnscan.yml
testcode/: app.py  dangerous_eval.py  insecure_yaml.py  safe_utils.py  shell_subprocess.py
tests/: render_markdown_demo.py  test_cli_end_to_end.py  test_diff_end_to_end.py  test_error_handling.py  test_format_end_to_end.py
vulnscan/: __init__.py  analyzer.py  cli.py  formats.py  gitdiff.py  prefilter.py  scanner.py
vulnscan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
