[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "0.1.0"
description = "Defensive source-code security auditor powered by the Anthropic API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vulnscan contributors" }]
keywords = ["security", "audit", "static-analysis", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
prefilter = ["semgrep>=1.50"]

[project.scripts]
vulnscan = "vulnscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnscan*"]
exclude = ["testcode*", "tests*"]
